# Cherit2

./: README.md  index.html  package.json  tsconfig.app.json  uno.config.ts  vite.config.ts
.github/workflows/: build.yaml
src/: App.svelte  fonts.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/breadcrumb_path/: index.svelte
src/components/file_manager/: README.md  build_file_tree.ts  file_tree_functions.ts  index.svelte  items_renderer.svelte  toolbar.svelte
src/components/root_folder_selector/: index.svelte
src/components/text_editor/: hanging_indentation_plugin.ts  index.svelte  obsidian_theme.ts  prosemark.svelte
src/components/titlebar/: index.svelte
src/types/: index.ts
